--- a/RTProClientToolsMac.PackageMaker/RTProClientToolsMac.PackageMaker.csproj
+++ b/RTProClientToolsMac.PackageMaker/RTProClientToolsMac.PackageMaker.csproj
@@ -7,4 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="installer\macOS-x64\darwin\.DS_Store" />
+  </ItemGroup>
 </Project>
