--- a/RTProClientToolsMac/appsettings.json
+++ b/RTProClientToolsMac/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "CopyPrintPath": "",
-  "KeepTempFilesFor": "2d 1h 30m 23s"
+  "CopyPrintPath": "", 
+  "urls": "http://localhost:5007"
 }
