--- a/RTProClientToolsMac/appsettings.json
+++ b/RTProClientToolsMac/appsettings.json
@@ -1,11 +1,5 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+{ 
   "AllowedHosts": "*",
-  "CopyPrintPath": "", 
-  "urls": "http://localhost:5007"
+  "CopyPrintPath": ""
+  // "urls": "http://localhost:5007"
 }
