--- a/RTProClientToolsMac/RTProClientToolsMac.csproj
+++ b/RTProClientToolsMac/RTProClientToolsMac.csproj
@@ -8,7 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+    <PackageReference Include="Serilog" Version="4.0.1" />
+    <PackageReference Include="serilog.AspNetCore" Version="8.0.2" />
+    <PackageReference Include="serilog.sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="logs\errors\" />
   </ItemGroup>
 
 </Project>
