--- a/RTProClientToolsMac/appsettings.json
+++ b/RTProClientToolsMac/appsettings.json
@@ -1,5 +1,12 @@
-{ 
-  "AllowedHosts": "*",
-  "CopyPrintPath": ""
-  // "urls": "http://localhost:5007"
+{
+  "CopyPrintPath": "",
+  "UseHttps": false,
+  // any value for port between 49152 and 65535 is valid
+  "Port": 55441,
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "None"
+    }
+  }
 }
