--- a/RTProClientToolsMac.PackageMaker/RTProClientToolsMac.PackageMaker.csproj
+++ b/RTProClientToolsMac.PackageMaker/RTProClientToolsMac.PackageMaker.csproj
@@ -26,7 +26,7 @@
     <None Update="installer\macOS-x64\darwin\Resources\LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="installer\macOS-x64\darwin\Resources\uninstall.sh">
+    <None Update="installer\macOS-x64\darwin\Resources\uninstall">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="installer\macOS-x64\darwin\Resources\run">
